backend/k8s/ingress-pride-services.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sdrf-assistant-ingress-pride-services
  namespace: sdrf-assistant
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/client-max-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "120"
spec:
  ingressClassName: nginx
  rules:
  - host: www.ebi.ac.uk
    http:
      paths:
      - path: /pride/services/sdrf-assistant(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: sdrf-assistant-service
            port:
              number: 80
